# not_free_well

./: .gitignore  Cargo.toml  settings.toml
src/: app.rs  lib.rs  main.rs
src/routes/: health_check.rs  index.rs  mod.rs  oauth.rs
src/settings/: mod.rs
tests/: health_check.rs  index.rs
tests/common/: mod.rs
