[package]
name = "not_free_well"
version = "0.0.1"
authors = ["m3id"]
edition = "2021"
description = "General multi live stream chat collect"
keywords = ["chat", "twitch"]
license = "MIT OR Apache-2.0"

[lib]
name = "not_free_well"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.83"
axum = "0.7.5"
config = "0.14.0"
oauth2 = "4.4.2"
reqwest = { version = "0.12.4", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = "1.0.201"
serde_json = "1.0.117"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
twitch_oauth_token = { git = "https://github.com/m3idnotfree/twitch_oauth.git" }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
